# meeting-spec-pipeline

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-06-meeting-spec-pipeline-mvp.md
docs/superpowers/specs/: 2026-05-06-meeting-spec-pipeline-design.md
plugins/meeting-transcribe-cloud/: README.md  index.js  openclaw.plugin.json
plugins/meeting-transcribe-cloud/.codex-plugin/: plugin.json
plugins/meeting-transcribe-cloud/config/: meeting-transcribe-cloud.secrets.example.json  openclaw-entry.example.json  openclaw-secrets-provider.example.json  provider.example.json  provider.schema.json
scripts/: install_openclaw.py
services/transcribe-service/src/transcribe_service/: __init__.py  app.py  chunking.py  config.py  providers.py  (+1 more)
skills/meeting-spec-pipeline/: SKILL.md  prompt.md  skill.json
skills/meeting-spec-pipeline/prompts/: dialogue.md  meeting_minutes.md  requirement_spec.md
skills/meeting-spec-pipeline/scripts/: collect_references.py  generate_dialogue.py  generate_meeting_minutes.py  generate_requirement_spec.py  locate_audio_file.py  pipeline_core.py  save_meeting_context.py  stt_queue_transcribe.py  transcribe_audio.py  validate_outputs.py
skills/meeting-spec-pipeline/templates/: meeting-context.md  questions.md
tests/: test_content_stages.py  test_e2e_mvp.py  test_manifest.py  test_plugin_config.py  test_project_skeleton.py  test_stage_validation.py  test_stt_queue_wrapper.py  test_transcribe_service.py  test_transcribe_stage.py
tests/fixtures/: meeting_context.json  meeting_reference.txt  spec_reference.txt
