[project]
name = "meeting-spec-pipeline"
version = "0.1.0"
description = "OpenClaw Skill and Plugin for staged meeting recording to requirement spec workflow"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "services/transcribe-service/src",
  "skills/meeting-spec-pipeline/scripts"
]
